[lworld] CDS is broken with InlineKlasses after the merge

XMLWordPrintable

      runtime/cds/appcds/dynamicArchive/DynamicArchiveRelocationTest.java
      runtime/cds/appcds/dynamicArchive/HelloDynamicInlineClass.java

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007f6150138a39, pid=2349455, tid=2349458
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-06-02-1236429.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-06-02-1236429.tobias.hartmann.valhalla, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xe52a39] InlineKlass::initialize_calling_convention(JavaThread*)+0x2d9

      Stack: [0x00007f6151f9b000,0x00007f615209c000], sp=0x00007f61520989b0, free space=1014k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xe52a39] InlineKlass::initialize_calling_convention(JavaThread*)+0x2d9 (inlineKlass.cpp:275)
      V [libjvm.so+0xe6cc28] InstanceKlass::restore_unshareable_info(ClassLoaderData*, Handle, PackageEntry*, JavaThread*)+0xc8 (instanceKlass.cpp:2877)
      V [libjvm.so+0xe538d8] InlineKlass::restore_unshareable_info(ClassLoaderData*, Handle, PackageEntry*, JavaThread*)+0x18 (inlineKlass.cpp:537)
      V [libjvm.so+0x17a3f1d] SystemDictionary::load_shared_class(InstanceKlass*, Handle, Handle, ClassFileStream const*, PackageEntry*, JavaThread*)+0x34d (systemDictionary.cpp:1248)
      V [libjvm.so+0x17a9a2b] SystemDictionaryShared::load_shared_class_for_builtin_loader(Symbol*, Handle, JavaThread*)+0x1db (systemDictionaryShared.cpp:97)
      V [libjvm.so+0x17a9ca3] SystemDictionaryShared::find_or_load_shared_class(Symbol*, Handle, JavaThread*)+0x1f3 (systemDictionaryShared.cpp:416)
      V [libjvm.so+0x1024846] JVM_FindLoadedClass+0x306 (jvm.cpp:1123)
      j java.lang.ClassLoader.findLoadedClass0(Ljava/lang/String;)Ljava/lang/Class;+0 java.base@21-lworld4ea

            Assignee:
            Frederic Parain
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: