8309357: [lworld] CDS is broken with InlineKlasses after the merge