src/hotspot/share/oops/inlineKlass.cpp
@@ -508,7 +508,6 @@ void InlineKlass::metaspace_pointers_do(MetaspaceClosure* it) {
   InstanceKlass::metaspace_pointers_do(it);
 
   InlineKlass* this_ptr = this;
-  // TODO: _adr_inlineklass_fixed_block ?
   it->push((Klass**)adr_value_array_klasses());
 }
 
@@ -534,6 +533,10 @@ void InlineKlass::remove_java_mirror() {
 }
 
 void InlineKlass::restore_unshareable_info(ClassLoaderData* loader_data, Handle protection_domain, PackageEntry* pkg_entry, TRAPS) {
+  // We are no longer bookkeeping pointer to fixed block during serialization, hence reinitializing
+  // fixed block address since its size was already accounted by InstanceKlass::size() and it will
+  // anyways be part of shared archive.
+  _adr_inlineklass_fixed_block = inlineklass_static_block();
   InstanceKlass::restore_unshareable_info(loader_data, protection_domain, pkg_entry, CHECK);
   if (value_array_klasses() != NULL) {
     value_array_klasses()->restore_unshareable_info(ClassLoaderData::the_null_class_loader_data(), Handle(), CHECK);
